apps/emojivoto-with-kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: emojivoto.ceusebi.ddnsfree.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-svc
              port:
                name: http
  tls:
    - secretName: linkerd-cert
      hosts:
        - emojivoto.ceusebi.ddnsfree.com
